[package]
name = "cafe-tab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
cqrs-es = "0.4.11"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
