[package]
name = "cafe-tab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
cqrs-es = "0.4.11"
postgres-es = "0.4.11"
rust_decimal = "1.35.0"
secrecy = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = "0.7.4"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
